# chat-debrief

./: .gitignore  ASYNC_RESEARCH.md  Cargo.toml  DESIGN.md  QUICKSTART_RESEARCH.md  README.md
bookmarklets/: README.md  aim.js  chat.js  gemini.js  minify.py  test_minify.py
chrome_snippets/: aim.js  gemini.js
docs/: bookmarklets.md  research.md
docs/eng/: bookmarklets.md  design.md  research.md  testing.md
src/: async_researcher.rs  autorater.rs  debrief.rs  gemini.rs  gemini_deep_research_client.rs  gemini_utils.rs  lib.rs  main.rs  processor.rs  research_orchestrator.rs  researcher.rs  run_research.rs
testdata/hamstring_injury/: 1.txt  2.txt  3.txt
testdata/hard_drive/: 1.txt  2.txt  3.txt
tests/: integration_test.rs
