[package]
name = "read_files"
version = "0.1.0"
edition = "2024"

[lib]
name = "read_files"
path = "src/lib.rs"

[[bin]]
name = "read_files"
path = "src/main.rs"

[[bin]]
name = "run_research"
path = "src/run_research.rs"

[dependencies]
genai-rs = "0.5.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
